add jupyter notebook widget

--- a/pytorchgui/example_notebooks/simple-linear-network-test.ipynb
+++ b/pytorchgui/example_notebooks/simple-linear-network-test.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017-06-08 13:57:35 - (network)[INFO][127.0.0.1:40732]: GET http://0.0.0.0:7060/api/v1/graph_spec  200 1011\n"
+      "2017-06-08 13:57:35 - (network)[INFO][127.0.0.1:40732]: GET http://0.0.0.0:7060/api/v1/graph_spec  200 1011\n",
+      "2017-06-08 13:58:35 - (sanic)[ERROR]: Transport closed @ ('127.0.0.1', 40732) and exception experienced during error handling\n",
+      "2017-06-08 13:58:35 - (sanic)[DEBUG]: Exception:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/callumjhays/miniconda3/lib/python3.6/site-packages/sanic_cors/extension.py\", line 175, in wrapped_function\n",
+      "    path = req.path\n",
+      "AttributeError: 'NoneType' object has no attribute 'path'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/callumjhays/miniconda3/lib/python3.6/site-packages/sanic/server.py\", line 272, in write_error\n",
+      "    response = self.error_handler.response(self.request, exception)\n",
+      "  File \"/home/callumjhays/miniconda3/lib/python3.6/site-packages/sanic_cors/extension.py\", line 177, in wrapped_function\n",
+      "    path = req.url\n",
+      "AttributeError: 'NoneType' object has no attribute 'url'\n",
+      "\n",
+      "2017-06-08 14:01:29 - (sanic)[INFO]: Stopping worker [25651]\n",
+      "2017-06-08 14:01:29 - (sanic)[INFO]: Server Stopped\n"
      ]
     }
    ],
