fix alphabetical id bug

--- a/example_notebooks/alexnet-test.ipynb
+++ b/example_notebooks/alexnet-test.ipynb
@@ -27,7 +27,7 @@
     }
    ],
    "source": [
-    "alexnet = torchvision.models.alexnet(pretrained=True)\n",
+    "model = torchvision.models.alexnet(pretrained=True)\n",
     "\n",
     "cifar10loader = DataLoader(\n",
     "    torchvision.datasets.CIFAR10(\n",
@@ -49,11 +49,453 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  <  a  ?\n",
+      "a   2  val +=  1 * 1\n",
+      "true\n",
+      "  <  b  ?\n",
+      "b   2  val +=  2 * 1\n",
+      "true\n",
+      "  <  c  ?\n",
+      "c   2  val +=  3 * 1\n",
+      "true\n",
+      "  <  d  ?\n",
+      "d   2  val +=  4 * 1\n",
+      "true\n",
+      "  <  e  ?\n",
+      "e   2  val +=  5 * 1\n",
+      "true\n",
+      "  <  f  ?\n",
+      "f   2  val +=  6 * 1\n",
+      "true\n",
+      "  <  g  ?\n",
+      "g   2  val +=  7 * 1\n",
+      "true\n",
+      "  <  h  ?\n",
+      "h   2  val +=  8 * 1\n",
+      "true\n",
+      "  <  i  ?\n",
+      "i   2  val +=  9 * 1\n",
+      "true\n",
+      "  <  j  ?\n",
+      "j   2  val +=  10 * 1\n",
+      "true\n",
+      "  <  k  ?\n",
+      "k   2  val +=  11 * 1\n",
+      "true\n",
+      "  <  l  ?\n",
+      "l   2  val +=  12 * 1\n",
+      "true\n",
+      "  <  m  ?\n",
+      "m   2  val +=  13 * 1\n",
+      "true\n",
+      "  <  n  ?\n",
+      "n   2  val +=  14 * 1\n",
+      "true\n",
+      "  <  o  ?\n",
+      "o   2  val +=  15 * 1\n",
+      "true\n",
+      "  <  p  ?\n",
+      "p   2  val +=  16 * 1\n",
+      "true\n",
+      "  <  q  ?\n",
+      "q   2  val +=  17 * 1\n",
+      "true\n",
+      "  <  r  ?\n",
+      "r   2  val +=  18 * 1\n",
+      "true\n",
+      "  <  s  ?\n",
+      "s   2  val +=  19 * 1\n",
+      "true\n",
+      "  <  t  ?\n",
+      "t   2  val +=  20 * 1\n",
+      "true\n",
+      "  <  u  ?\n",
+      "u   2  val +=  21 * 1\n",
+      "true\n",
+      "  <  v  ?\n",
+      "v   2  val +=  22 * 1\n",
+      "true\n",
+      "  <  w  ?\n",
+      "w   2  val +=  23 * 1\n",
+      "true\n",
+      "  <  x  ?\n",
+      "x   2  val +=  24 * 1\n",
+      "true\n",
+      "  <  y  ?\n",
+      "y   2  val +=  25 * 1\n",
+      "true\n",
+      "  <  z  ?\n",
+      "z   2  val +=  26 * 1\n",
+      "true\n",
+      "  <  a  ?\n",
+      "a   2  val +=  1 * 1\n",
+      "true\n",
+      "  <  aa  ?\n",
+      "aa   2  val +=  1 * 1\n",
+      "aa   3  val +=  1 * 26\n",
+      "true\n",
+      "  <  ab  ?\n",
+      "ab   2  val +=  2 * 1\n",
+      "ab   4  val +=  1 * 26\n",
+      "true\n",
+      "  <  ac  ?\n",
+      "ac   2  val +=  3 * 1\n",
+      "ac   5  val +=  1 * 26\n",
+      "true\n",
+      "  <  ad  ?\n",
+      "ad   2  val +=  4 * 1\n",
+      "ad   6  val +=  1 * 26\n",
+      "true\n",
+      "  <  ae  ?\n",
+      "ae   2  val +=  5 * 1\n",
+      "ae   7  val +=  1 * 26\n",
+      "true\n",
+      "  <  af  ?\n",
+      "af   2  val +=  6 * 1\n",
+      "af   8  val +=  1 * 26\n",
+      "true\n",
+      "  <  ag  ?\n",
+      "ag   2  val +=  7 * 1\n",
+      "ag   9  val +=  1 * 26\n",
+      "true\n",
+      "  <  ah  ?\n",
+      "ah   2  val +=  8 * 1\n",
+      "ah   10  val +=  1 * 26\n",
+      "true\n",
+      "  <  ai  ?\n",
+      "ai   2  val +=  9 * 1\n",
+      "ai   11  val +=  1 * 26\n",
+      "true\n",
+      "  <  aj  ?\n",
+      "aj   2  val +=  10 * 1\n",
+      "aj   12  val +=  1 * 26\n",
+      "true\n",
+      "  <  ak  ?\n",
+      "ak   2  val +=  11 * 1\n",
+      "ak   13  val +=  1 * 26\n",
+      "true\n",
+      "  <  al  ?\n",
+      "al   2  val +=  12 * 1\n",
+      "al   14  val +=  1 * 26\n",
+      "true\n",
+      "  <  am  ?\n",
+      "am   2  val +=  13 * 1\n",
+      "am   15  val +=  1 * 26\n",
+      "true\n",
+      "am  <  a  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "a   2  val +=  1 * 1\n",
+      "am  <  b  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "b   2  val +=  2 * 1\n",
+      "am  <  c  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "c   2  val +=  3 * 1\n",
+      "am  <  d  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "d   2  val +=  4 * 1\n",
+      "am  <  e  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "e   2  val +=  5 * 1\n",
+      "am  <  f  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "f   2  val +=  6 * 1\n",
+      "am  <  g  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "g   2  val +=  7 * 1\n",
+      "am  <  h  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "h   2  val +=  8 * 1\n",
+      "am  <  i  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "i   2  val +=  9 * 1\n",
+      "am  <  j  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "j   2  val +=  10 * 1\n",
+      "am  <  k  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "k   2  val +=  11 * 1\n",
+      "am  <  l  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "l   2  val +=  12 * 1\n",
+      "am  <  m  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "m   2  val +=  13 * 1\n",
+      "am  <  n  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "n   2  val +=  14 * 1\n",
+      "am  <  o  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "o   2  val +=  15 * 1\n",
+      "am  <  p  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "p   2  val +=  16 * 1\n",
+      "am  <  q  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "q   2  val +=  17 * 1\n",
+      "am  <  r  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "r   2  val +=  18 * 1\n",
+      "am  <  s  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "s   2  val +=  19 * 1\n",
+      "am  <  t  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "t   2  val +=  20 * 1\n",
+      "am  <  u  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "u   2  val +=  21 * 1\n",
+      "am  <  v  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "v   2  val +=  22 * 1\n",
+      "am  <  w  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "w   2  val +=  23 * 1\n",
+      "am  <  x  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "x   2  val +=  24 * 1\n",
+      "am  <  y  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "y   2  val +=  25 * 1\n",
+      "am  <  z  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "z   2  val +=  26 * 1\n",
+      "  <  a  ?\n",
+      "a   2  val +=  1 * 1\n",
+      "true\n",
+      "am  <  aa  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "aa   2  val +=  1 * 1\n",
+      "aa   3  val +=  1 * 26\n",
+      "am  <  ab  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "ab   2  val +=  2 * 1\n",
+      "ab   4  val +=  1 * 26\n",
+      "am  <  ac  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "ac   2  val +=  3 * 1\n",
+      "ac   5  val +=  1 * 26\n",
+      "am  <  ad  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "ad   2  val +=  4 * 1\n",
+      "ad   6  val +=  1 * 26\n",
+      "am  <  ae  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "ae   2  val +=  5 * 1\n",
+      "ae   7  val +=  1 * 26\n",
+      "am  <  af  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "af   2  val +=  6 * 1\n",
+      "af   8  val +=  1 * 26\n",
+      "am  <  ag  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "ag   2  val +=  7 * 1\n",
+      "ag   9  val +=  1 * 26\n",
+      "am  <  ah  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "ah   2  val +=  8 * 1\n",
+      "ah   10  val +=  1 * 26\n",
+      "am  <  ai  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "ai   2  val +=  9 * 1\n",
+      "ai   11  val +=  1 * 26\n",
+      "am  <  aj  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "aj   2  val +=  10 * 1\n",
+      "aj   12  val +=  1 * 26\n",
+      "am  <  ak  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "ak   2  val +=  11 * 1\n",
+      "ak   13  val +=  1 * 26\n",
+      "am  <  al  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "al   2  val +=  12 * 1\n",
+      "al   14  val +=  1 * 26\n",
+      "true\n",
+      "am  <  am  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "am   2  val +=  13 * 1\n",
+      "am   15  val +=  1 * 26\n",
+      "true\n",
+      "am  <  an  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "an   2  val +=  14 * 1\n",
+      "an   16  val +=  1 * 26\n",
+      "true\n",
+      "am  <  ao  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "ao   2  val +=  15 * 1\n",
+      "ao   17  val +=  1 * 26\n",
+      "true\n",
+      "am  <  ap  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "ap   2  val +=  16 * 1\n",
+      "ap   18  val +=  1 * 26\n",
+      "true\n",
+      "am  <  aq  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "aq   2  val +=  17 * 1\n",
+      "aq   19  val +=  1 * 26\n",
+      "true\n",
+      "am  <  ar  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "ar   2  val +=  18 * 1\n",
+      "ar   20  val +=  1 * 26\n",
+      "true\n",
+      "am  <  as  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "as   2  val +=  19 * 1\n",
+      "as   21  val +=  1 * 26\n",
+      "true\n",
+      "am  <  at  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "at   2  val +=  20 * 1\n",
+      "at   22  val +=  1 * 26\n",
+      "true\n",
+      "am  <  au  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "au   2  val +=  21 * 1\n",
+      "au   23  val +=  1 * 26\n",
+      "true\n",
+      "am  <  av  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "av   2  val +=  22 * 1\n",
+      "av   24  val +=  1 * 26\n",
+      "true\n",
+      "am  <  aw  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "aw   2  val +=  23 * 1\n",
+      "aw   25  val +=  1 * 26\n",
+      "true\n",
+      "am  <  ax  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "ax   2  val +=  24 * 1\n",
+      "ax   26  val +=  1 * 26\n",
+      "true\n",
+      "am  <  ay  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "ay   2  val +=  25 * 1\n",
+      "ay   27  val +=  1 * 26\n",
+      "true\n",
+      "am  <  az  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "az   2  val +=  26 * 1\n",
+      "az   28  val +=  1 * 26\n",
+      "true\n",
+      "  <  b  ?\n",
+      "b   2  val +=  2 * 1\n",
+      "true\n",
+      "am  <  ba  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "ba   2  val +=  1 * 1\n",
+      "ba   3  val +=  2 * 26\n",
+      "true\n",
+      "am  <  bb  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "bb   2  val +=  2 * 1\n",
+      "bb   4  val +=  2 * 26\n",
+      "true\n",
+      "am  <  bc  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "bc   2  val +=  3 * 1\n",
+      "bc   5  val +=  2 * 26\n",
+      "true\n",
+      "am  <  bd  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "bd   2  val +=  4 * 1\n",
+      "bd   6  val +=  2 * 26\n",
+      "true\n",
+      "am  <  be  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "be   2  val +=  5 * 1\n",
+      "be   7  val +=  2 * 26\n",
+      "true\n",
+      "am  <  bf  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "bf   2  val +=  6 * 1\n",
+      "bf   8  val +=  2 * 26\n",
+      "true\n",
+      "am  <  bg  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "bg   2  val +=  7 * 1\n",
+      "bg   9  val +=  2 * 26\n",
+      "true\n",
+      "am  <  bh  ?\n",
+      "am   0  val +=  13 * 1\n",
+      "am   13  val +=  1 * 26\n",
+      "bh   2  val +=  8 * 1\n",
+      "bh   10  val +=  2 * 26\n",
+      "true\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017-06-09 13:09:15,429: INFO: Goin' Fast @ http://0.0.0.0:7060\n",
-      "2017-06-09 13:09:15,474: INFO: Starting worker [24879]\n"
+      "2017-06-09 17:35:05,216: INFO: Goin' Fast @ http://0.0.0.0:7060\n",
+      "2017-06-09 17:35:05,244: INFO: Starting worker [17642]\n"
      ]
     },
     {
@@ -67,24 +509,53 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2017-06-09 13:10:16,328: ERROR: Transport closed @ ('127.0.0.1', 59548) and exception experienced during error handling\n",
-      "2017-06-09 13:10:16,880: ERROR: Transport closed @ ('127.0.0.1', 59560) and exception experienced during error handling\n"
-     ]
     }
    ],
    "source": [
-    "graph = pytorchgui.Graph(alexnet, cifar10loader)\n",
+    "graph = pytorchgui.Graph(model, cifar10loader)\n",
     "\n",
     "# this needs to be called to populate the graph for the first time.\n",
     "# if 'cifar10loader' or another data-loader is not provided, the\n",
     "# inputs must be provided to instrumented_forward\n",
-    "graph.instrumented_forward()\n",
+    "graph.instrumented_forward(Variable(next(cifar10loader.__iter__())[0]))\n",
     "graph.serve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"q\": {\"children\": {\"features\": \"r\", \"classifier\": \"af\"}, \"params\": {}}, \"r\": {\"children\": {\"0\": \"s\", \"1\": \"t\", \"2\": \"u\", \"3\": \"v\", \"4\": \"w\", \"5\": \"x\", \"6\": \"y\", \"7\": \"z\", \"8\": \"aa\", \"9\": \"ab\", \"10\": \"ac\", \"11\": \"ad\", \"12\": \"ae\"}, \"params\": {}}, \"s\": {\"children\": {}, \"params\": {\"weight\": \"a\", \"bias\": \"b\"}}, \"t\": {\"children\": {}, \"params\": {}}, \"u\": {\"children\": {}, \"params\": {}}, \"v\": {\"children\": {}, \"params\": {\"weight\": \"c\", \"bias\": \"d\"}}, \"w\": {\"children\": {}, \"params\": {}}, \"x\": {\"children\": {}, \"params\": {}}, \"y\": {\"children\": {}, \"params\": {\"weight\": \"e\", \"bias\": \"f\"}}, \"z\": {\"children\": {}, \"params\": {}}, \"aa\": {\"children\": {}, \"params\": {\"weight\": \"g\", \"bias\": \"h\"}}, \"ab\": {\"children\": {}, \"params\": {}}, \"ac\": {\"children\": {}, \"params\": {\"weight\": \"i\", \"bias\": \"j\"}}, \"ad\": {\"children\": {}, \"params\": {}}, \"ae\": {\"children\": {}, \"params\": {}}, \"af\": {\"children\": {\"0\": \"ag\", \"1\": \"ah\", \"2\": \"ai\", \"3\": \"aj\", \"4\": \"ak\", \"5\": \"al\", \"6\": \"am\"}, \"params\": {}}, \"ag\": {\"children\": {}, \"params\": {}}, \"ah\": {\"children\": {}, \"params\": {\"weight\": \"k\", \"bias\": \"l\"}}, \"ai\": {\"children\": {}, \"params\": {}}, \"aj\": {\"children\": {}, \"params\": {}}, \"ak\": {\"children\": {}, \"params\": {\"weight\": \"m\", \"bias\": \"n\"}}, \"al\": {\"children\": {}, \"params\": {}}, \"am\": {\"children\": {}, \"params\": {\"weight\": \"o\", \"bias\": \"p\"}}}\n",
+      "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "print(json.dumps(graph.module_tree))\n",
+    "print([v for k, v in graph.param_to_id.items()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'al': {'type': 'Input: FloatTensor (1, 3, 224, 224)', 'dependencies': set(), 'parent_module': None}, 'am': {'type': 'ConvNd', 'dependencies': {'a', 'b', 'al'}, 'parent_module': 's'}, 'an': {'type': 'Threshold', 'dependencies': {'am'}, 'parent_module': 't'}, 'ao': {'type': 'MaxPool2d', 'dependencies': {'an'}, 'parent_module': 'u'}, 'ap': {'type': 'ConvNd', 'dependencies': {'ao', 'd', 'c'}, 'parent_module': 'v'}, 'aq': {'type': 'Threshold', 'dependencies': {'ap'}, 'parent_module': 'w'}, 'ar': {'type': 'MaxPool2d', 'dependencies': {'aq'}, 'parent_module': 'x'}, 'as': {'type': 'ConvNd', 'dependencies': {'e', 'ar', 'f'}, 'parent_module': 'y'}, 'at': {'type': 'Threshold', 'dependencies': {'as'}, 'parent_module': 'z'}, 'au': {'type': 'ConvNd', 'dependencies': {'at', 'g', 'h'}, 'parent_module': 'aa'}, 'av': {'type': 'Threshold', 'dependencies': {'au'}, 'parent_module': 'ab'}, 'aw': {'type': 'ConvNd', 'dependencies': {'av', 'j', 'i'}, 'parent_module': 'ac'}, 'ax': {'type': 'Threshold', 'dependencies': {'aw'}, 'parent_module': 'ad'}, 'ay': {'type': 'MaxPool2d', 'dependencies': {'ax'}, 'parent_module': 'ae'}, 'az': {'type': 'Dropout', 'dependencies': {'ba'}, 'parent_module': 'ag'}, 'ba': {'type': 'View', 'dependencies': {'ay'}, 'parent_module': 'ag'}, 'bb': {'type': 'Linear', 'dependencies': {'l', 'az', 'k'}, 'parent_module': 'ah'}, 'bc': {'type': 'Threshold', 'dependencies': {'bb'}, 'parent_module': 'ai'}, 'bd': {'type': 'Dropout', 'dependencies': {'bc'}, 'parent_module': 'aj'}, 'be': {'type': 'Linear', 'dependencies': {'n', 'm', 'bd'}, 'parent_module': 'ak'}, 'bf': {'type': 'Threshold', 'dependencies': {'be'}, 'parent_module': 'al'}, 'bg': {'type': 'Linear', 'dependencies': {'o', 'p', 'bf'}, 'parent_module': 'am'}, 'bh': {'type': 'Output: FloatTensor (1, 1000)', 'dependencies': {'bg'}, 'parent_module': 'q'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(graph.functional_graph)"
    ]
   }
  ],
