--- a/example_notebooks/simple-linear-network-test.ipynb
+++ b/example_notebooks/simple-linear-network-test.ipynb
@@ -30,9 +30,11 @@
     "        self.linear2 = nn.Linear(128, 1)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = self.linear1(x)\n",
-    "        x = self.linear2(x)\n",
-    "        x = nn.functional.relu(x)\n",
+    "        x = nn.Sequential(\n",
+    "            self.linear1,\n",
+    "            self.linear2,\n",
+    "            nn.ReLU()\n",
+    "        )(x)\n",
     "        return x * 55"
    ]
   },
@@ -42,67 +44,40 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2017-06-08 13:57:34 - (sanic)[DEBUG]: \n",
-      "                 ▄▄▄▄▄\n",
-      "        ▀▀▀██████▄▄▄       _______________\n",
-      "      ▄▄▄▄▄  █████████▄  /                 \\\n",
-      "     ▀▀▀▀█████▌ ▀▐▄ ▀▐█ |   Gotta go fast!  |\n",
-      "   ▀▀█████▄▄ ▀██████▄██ | _________________/\n",
-      "   ▀▄▄▄▄▄  ▀▀█▄▀█════█▀ |/\n",
-      "        ▀▀▀▄  ▀▀███ ▀       ▄▄\n",
-      "     ▄███▀▀██▄████████▄ ▄▀▀▀▀▀▀█▌\n",
-      "   ██▀▄▄▄██▀▄███▀ ▀▀████      ▄██\n",
-      "▄▀▀▀▄██▄▀▀▌████▒▒▒▒▒▒███     ▌▄▄▀\n",
-      "▌    ▐▀████▐███▒▒▒▒▒▐██▌\n",
-      "▀▄▄▄▄▀   ▀▀████▒▒▒▒▄██▀\n",
-      "          ▀▀█████████▀\n",
-      "        ▄▄██▀██████▀█\n",
-      "      ▄██▀     ▀▀▀  █\n",
-      "     ▄█             ▐▌\n",
-      " ▄▄▄▄█▌              ▀█▄▄▄▄▀▀▄\n",
-      "▌     ▐                ▀▀▄▄▄▀\n",
-      " ▀▀▄▄▀\n",
-      "\n",
-      "2017-06-08 13:57:34 - (sanic)[INFO]: Goin' Fast @ http://0.0.0.0:7060\n",
-      "2017-06-08 13:57:34 - (sanic)[INFO]: Starting worker [25651]\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Variable containing:\n",
-      " 0.6038\n",
-      "[torch.FloatTensor of size 1x1]\n",
-      ",)\n"
+      "g\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017-06-08 13:57:35 - (network)[INFO][127.0.0.1:40732]: GET http://0.0.0.0:7060/api/v1/graph_spec  200 1011\n",
-      "2017-06-08 13:58:35 - (sanic)[ERROR]: Transport closed @ ('127.0.0.1', 40732) and exception experienced during error handling\n",
-      "2017-06-08 13:58:35 - (sanic)[DEBUG]: Exception:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/callumjhays/miniconda3/lib/python3.6/site-packages/sanic_cors/extension.py\", line 175, in wrapped_function\n",
-      "    path = req.path\n",
-      "AttributeError: 'NoneType' object has no attribute 'path'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/callumjhays/miniconda3/lib/python3.6/site-packages/sanic/server.py\", line 272, in write_error\n",
-      "    response = self.error_handler.response(self.request, exception)\n",
-      "  File \"/home/callumjhays/miniconda3/lib/python3.6/site-packages/sanic_cors/extension.py\", line 177, in wrapped_function\n",
-      "    path = req.url\n",
-      "AttributeError: 'NoneType' object has no attribute 'url'\n",
-      "\n",
-      "2017-06-08 14:01:29 - (sanic)[INFO]: Stopping worker [25651]\n",
-      "2017-06-08 14:01:29 - (sanic)[INFO]: Server Stopped\n"
+      "2017-06-09 16:14:54,198: INFO: Goin' Fast @ http://0.0.0.0:7060\n",
+      "2017-06-09 16:14:54,220: INFO: Starting worker [11169]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe src='http://0.0.0.0:7060' width='800px' scrolling='no' height='500px' style='background-color:white; overflow: hidden;'></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2017-06-09 16:15:55,158: ERROR: Transport closed @ ('127.0.0.1', 55326) and exception experienced during error handling\n",
+      "2017-06-09 16:15:55,829: ERROR: Transport closed @ ('127.0.0.1', 55334) and exception experienced during error handling\n",
+      "2017-06-09 16:16:00,284: INFO: Stopping worker [11169]\n",
+      "2017-06-09 16:16:00,287: INFO: Server Stopped\n"
      ]
     }
    ],
